--- a/index.html
+++ b/index.html
@@ -14,46 +14,46 @@
         <div class="toolbar">
             <div class="toolbar-header">
                 <!-- <div class="toolbar-logo"></div> -->
-                <svg class="toolbar-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" /></svg>
+                <img src="images/view-dashboard-outline.svg" alt="" class="toolbar-logo">
                 <div class="toolbar-title">Dashboard</div>
             </div>
             <div class="toolbar-list">
                 <div class="toolbar-item">
-                    <img class="toolbar-list-logo" src="images/home-7-16.png" alt="">
+                    <img class="toolbar-list-logo" src="images/home-outline.svg" alt="">
                     <div class="toolbar-item-title">Home</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/face-man-profile.svg" alt="">
                     <div class="toolbar-item-title">Profile</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/message-outline.svg" alt="">
                     <div class="toolbar-item-title">Messages</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/history.svg" alt="">
                     <div class="toolbar-item-title">History</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/calendar-check-outline.svg" alt="">
                     <div class="toolbar-item-title">Tasks</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/account-group-outline.svg" alt="">
                     <div class="toolbar-item-title">Communities</div>
                 </div>
             </div>
             <div class="toolbar-list-bottom">
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/cog-outline.svg" alt="">
                     <div class="toolbar-item-title">Settings</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/help-box-outline.svg alt="">
                     <div class="toolbar-item-title">Support</div>
                 </div>
                 <div class="toolbar-item">
-                    <div class="toolbar-item-logo"></div>
+                    <img class="toolbar-list-logo" src="images/shield-lock-outline.svg" alt="">
                     <div class="toolbar-item-title">Privacy</div>
                 </div>
             </div>
@@ -65,17 +65,18 @@
             <div class="right-header">
                 <div class="right-header-top">
                     <div class="right-header-top-left">
+                        <img src="images/magnify.svg" alt="" class="search-logo">
                         <input type="text" class="search">
                     </div>
                     <div class="right-header-top-right">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img class="header-icon" src="images/bell-ring-outline.svg" alt="">
+                        <img class="header-profile" src="images/profile.png" alt="">
                         <div class="header-top-right-name">Drew</div>
                     </div>
                 </div>
                 <div class="right-header-bottom">
                     <div class="right-header-bottom-left">
-                        <img src="" alt="" class="header-logo">
+                        <img src="images/profile.png" alt="" class="header-logo">
                         <div class="right-header-bottom-left-name">
                             <p class="hi-there">Hi there,</p>
                             <p class="name">Drew</p>
@@ -163,31 +164,36 @@
                     </div>
                 </div>
                 <div class="right-body-right">
-                    <div class="label">Announcements</div>
-                    <div class="announcements">
-                        <div class="announcement">
-                            <h2 class="announcement-title">Site Maintenance</h2>
-                            <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
-                        </div>
-                        <div class="announcement">
-                            <h2 class="announcement-title">Community Share Day</h2>
-                            <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
-                        </div>
-                        <div class="announcement">
-                            <h2 class="announcement-title">Updated Privacy Policy</h2>
-                            <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
-                        </div>
-                    </div>
-                    <div class="label">Trending</div>
-                    <div class="trending">
-                        <div class="trending-item">
-                            <img src="" alt="">
-                            <div class="trending-item-text">
-                                <p class="trending-handle"></p>
-                                <p class="trending-app-name"></p>
+                    <div class="right-body-right-top">
+                        <div class="label">Announcements</div>
+                        <div class="announcements">
+                            <div class="announcement">
+                                <h2 class="announcement-title">Site Maintenance</h2>
+                                <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
+                            </div>
+                            <div class="announcement">
+                                <h2 class="announcement-title">Community Share Day</h2>
+                                <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
+                            </div>
+                            <div class="announcement">
+                                <h2 class="announcement-title">Updated Privacy Policy</h2>
+                                <p class="announcement-info">Dummy text Dummy text Dummy text Dummy text </p>
                             </div>
                         </div>
                     </div>
+                    <div class="right-body-right-bottom">
+                        <div class="label">Trending</div>
+                        <div class="trending">
+                            <div class="trending-item">
+                                <img src="" alt="">
+                                <div class="trending-item-text">
+                                    <p class="trending-handle"></p>
+                                    <p class="trending-app-name"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
