layout mostly done

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="toolbar-item-title">Settings</div>
                 </div>
                 <div class="toolbar-item">
-                    <img class="toolbar-list-logo" src="images/help-box-outline.svg alt="">
+                    <img class="toolbar-list-logo" src="images/help-box-outline.svg" alt="">
                     <div class="toolbar-item-title">Support</div>
                 </div>
                 <div class="toolbar-item">
@@ -78,8 +78,7 @@
                     <div class="right-header-bottom-left">
                         <img src="images/profile.png" alt="" class="header-logo">
                         <div class="right-header-bottom-left-name">
-                            <p class="hi-there">Hi there,</p>
-                            <p class="name">Drew</p>
+                            <p class="hi-there">Hi there,<br><span class="name">Drew (@Drew)</span></span></p>
                         </div>
                     </div>
                     <div class="right-header-bottom-right">
@@ -184,18 +183,35 @@
                     <div class="right-body-right-bottom">
                         <div class="label">Trending</div>
                         <div class="trending">
-                            <div class="trending-item">
-                                <img src="" alt="">
-                                <div class="trending-item-text">
-                                    <p class="trending-handle"></p>
-                                    <p class="trending-app-name"></p>
+                            <div class="trending-item-list">
+                                <div class="trending-item">
+                                    <img class="trending-image" src="images/man.png" alt="">
+                                    <p class="trending-handle">@SSL<br><span class="trending-app">Recovery</span></span></p>                            
+                                </div>
+                                <div class="trending-item">
+                                    <img class="trending-image" src="images/profile.png" alt="">
+                                    <p class="trending-handle">@SSL<br><span class="trending-app">Recovery</span></span></p>
+                                </div>
+                                <div class="trending-item">
+                                    <img class="trending-image" src="images/guide-2.png" alt="">
+                                    <p class="trending-handle">@SSL<br><span class="trending-app">Recovery</span></span></p>
+                                </div>
+                                <div class="trending-item">
+                                    <img class="trending-image" src="images/reporter.png" alt="">
+                                    <p class="trending-handle">@SSL<br><span class="trending-app">Recovery</span></span></p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
                 </div>
             </div>
+            <p class="credits">
+                Credits in order:<br>
+                <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Freepik - Flaticon</a><br>
+                <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Freepik - Flaticon</a><br>
+                <a href="https://www.flaticon.com/free-icons/professions-and-jobs" title="professions-and-jobs icons">Professions-and-jobs icons created by Freepik - Flaticon</a><br>
+                <a href="https://www.flaticon.com/free-icons/professions-and-jobs" title="professions-and-jobs icons">Professions-and-jobs icons created by Freepik - Flaticon</a><br>
+            </p>
         </div>
     </div>
         
