added hover effects

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                         </div>                    
                     </div>
                 </div>
+                <!-- <label for="right-body-right-top" class="label">Announcements</label> -->
                 <div class="right-body-right">
+                    
                     <div class="right-body-right-top">
                         <div class="label">Announcements</div>
                         <div class="announcements">
